--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
 language: swift
 osx_image: xcode9.1
 script:
-    - xcodebuild -project SimpleToDo.xcodeproj  -scheme SimpleToDo -configuration "Release" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
+    - xcodebuild -project BluetoothLEManager.xcodeproj  -scheme BluetoothLEManager -configuration "Release" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
